--- a/primary-three.html
+++ b/primary-three.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Primary Two | St Paul Learning Centre</title>
+  <title>Primary Three | St Paul Learning Centre</title>
 
   <style>
     * {
@@ -199,7 +199,7 @@
   </nav>
 
   <header>
-    <h2>Primary Two</h2>
+    <h2>Primary Three</h2>
     <p>Welcome to the shining stars of St Paul Learning Centre ✨</p>
   </header>
 
