--- a/primary-seven.html
+++ b/primary-seven.html
@@ -1,1 +1,223 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Primary Seven | St Paul Learning Centre</title>
 
+<style>
+  * { margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif; }
+
+  body {
+    background: linear-gradient(135deg, #0f172a, #1e293b);
+    color: white;
+    min-height: 100vh;
+  }
+
+  /* Navbar */
+  nav {
+    background: rgba(15, 23, 42, 0.95);
+    padding: 15px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #38bdf8;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+  }
+
+  nav h1 { font-size: 1.4rem; color: #38bdf8; }
+
+  .menu-toggle { font-size: 1.8rem; cursor: pointer; color: white; transition: 0.3s; }
+
+  .menu {
+    display: none;
+    flex-direction: column;
+    background: rgba(15, 23, 42, 0.98);
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    width: 200px;
+    border: 1px solid #38bdf8;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #38bdf8;
+    overflow: hidden;
+  }
+
+  .menu a {
+    color: white;
+    text-decoration: none;
+    padding: 12px 16px;
+    transition: 0.3s;
+    border-bottom: 1px solid rgba(56, 189, 248, 0.3);
+  }
+
+  .menu a:hover { background: #38bdf8; color: #0f172a; }
+
+  /* Header */
+  header { text-align: center; padding: 40px 20px; }
+
+  header h2 { font-size: 2rem; color: #38bdf8; }
+  header p { margin-top: 10px; font-size: 1rem; color: #cbd5e1; }
+
+  /* Teacher section */
+  .teacher {
+    text-align: center;
+    margin: 20px;
+    padding: 15px;
+    border: 2px solid #38bdf8;
+    border-radius: 10px;
+    background: rgba(56, 189, 248, 0.05);
+    box-shadow: 0 0 10px #38bdf8;
+  }
+
+  .teacher h3 { color: #38bdf8; margin-bottom: 5px; }
+
+  /* Subjects */
+  .subjects {
+    margin: 30px auto;
+    width: 90%;
+    max-width: 600px;
+  }
+
+  .subjects h3 {
+    text-align: center;
+    color: #38bdf8;
+    margin-bottom: 15px;
+  }
+
+  .subject-list { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+
+  .subject {
+    background: rgba(56, 189, 248, 0.1);
+    border: 1px solid #38bdf8;
+    border-radius: 8px;
+    padding: 10px;
+    text-align: center;
+    transition: 0.3s;
+  }
+
+  .subject:hover { background: #38bdf8; color: #0f172a; }
+
+  /* Timetable */
+  table {
+    width: 90%;
+    margin: 30px auto;
+    border-collapse: collapse;
+    border: 1px solid #38bdf8;
+    box-shadow: 0 0 10px #38bdf8;
+  }
+
+  th, td { border: 1px solid #38bdf8; padding: 10px; text-align: center; }
+
+  th { background: #38bdf8; color: #0f172a; }
+  td { background: rgba(56, 189, 248, 0.1); }
+
+  /* Back Button */
+  .back-btn {
+    display: block;
+    text-align: center;
+    margin: 30px auto;
+    width: fit-content;
+    background: #38bdf8;
+    color: #0f172a;
+    padding: 12px 25px;
+    border-radius: 25px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
+    box-shadow: 0 0 10px #38bdf8;
+  }
+
+  .back-btn:hover { background: #0f172a; color: #38bdf8; box-shadow: 0 0 15px #38bdf8; }
+
+</style>
+</head>
+<body>
+
+<nav>
+  <h1>St Paul LC</h1>
+  <div class="menu-toggle" id="menuToggle">☰</div>
+  <div class="menu" id="menu">
+    <a href="index.html">Home</a>
+    <a href="class.html">Classes</a>
+    <a href="teachers.html">Teachers</a>
+    <a href="contact.html">Contact</a>
+  </div>
+</nav>
+
+<header>
+  <h2>Primary Seven</h2>
+  <p>Preparing students for final assessments and future success ✨</p>
+</header>
+
+<section class="teacher">
+  <h3>Class Teacher: Mrs. Grace Nakato</h3>
+  <p>Dedicated to excellence and equipping learners with advanced skills.</p>
+</section>
+
+<section class="subjects">
+  <h3>Subjects Offered</h3>
+  <div class="subject-list">
+    <div class="subject">English</div>
+    <div class="subject">Mathematics</div>
+    <div class="subject">Science</div>
+    <div class="subject">Social Studies</div>
+    <div class="subject">Religious Education</div>
+    <div class="subject">Computer Studies</div>
+  </div>
+</section>
+
+<section class="timetable">
+  <h3 style="text-align:center; color:#38bdf8;">Weekly Timetable</h3>
+  <table>
+    <tr>
+      <th>Day</th>
+      <th>Morning</th>
+      <th>Afternoon</th>
+    </tr>
+    <tr>
+      <td>Monday</td>
+      <td>English</td>
+      <td>Mathematics</td>
+    </tr>
+    <tr>
+      <td>Tuesday</td>
+      <td>Science</td>
+      <td>Social Studies</td>
+    </tr>
+    <tr>
+      <td>Wednesday</td>
+      <td>English</td>
+      <td>Computer Studies</td>
+    </tr>
+    <tr>
+      <td>Thursday</td>
+      <td>Mathematics</td>
+      <td>Religious Education</td>
+    </tr>
+    <tr>
+      <td>Friday</td>
+      <td>Revision</td>
+      <td>Games</td>
+    </tr>
+  </table>
+</section>
+
+<a href="class.html" class="back-btn">⬅ Back to Classes</a>
+
+<script>
+  const menuToggle = document.getElementById("menuToggle");
+  const menu = document.getElementById("menu");
+  let isOpen = false;
+
+  menuToggle.addEventListener("click", () => {
+    isOpen = !isOpen;
+    menu.style.display = isOpen ? "flex" : "none";
+    menuToggle.textContent = isOpen ? "✖" : "☰";
+  });
+</script>
+
+</body>
+</html>
