--- a/resources.html
+++ b/resources.html
@@ -41,10 +41,10 @@
         <h2>Resources & Downloads</h2>
         <p>Access and download educational materials to support learning. Stay updated with notes, homework, timetables, exam schedules, and teacher resources.</p>
         <ul class="feature-list">
-            <li><a href="notes.html">📘 Class Notes</a></li>
-            <li><a href="homework.html">📝 Homework Assignments</a></li>
-            <li><a href="timetable.html">⏰ Class Timetables</a></li>
-            <li><a href="exams.html">📅 Exam Schedules</a></li>
+            <li><a href="class.html">📘 Class Notes</a></li>
+            <li><a href="class.html">📝 Homework Assignments</a></li>
+            <li><a href="class.html">⏰ Class Timetables</a></li>
+            <li><a href="class.html">📅 Exam Schedules</a></li>
             <li><a href="teacher-resources.html">👩‍🏫 Teacher Resources</a></li>
         </ul>
     </section>
