--- a/login.html
+++ b/login.html
@@ -84,14 +84,14 @@
     <h2>Welcome, Nicholas</h2>
     <p>Select a page to access:</p>
     <ul>
-      <li><button onclick="goToPage('exams.html')">Exams</button></li>
-      <li><button onclick="goToPage('homework.html')">Homework</button></li>
-      <li><button onclick="goToPage('notes.html')">Notes</button></li>
+      <li><button onclick="goToPage('class.html')">Exams</button></li>
+      <li><button onclick="goToPage('class.html')">Homework</button></li>
+      <li><button onclick="goToPage('class.html')">Notes</button></li>
       <li><button onclick="goToPage('parent-portal.html')">Parent Portal</button></li>
       <li><button onclick="goToPage('resources.html')">Resources</button></li>
-      <li><button onclick="goToPage('student-portal.html')">Student Portal</button></li>
+      <li><button onclick="goToPage('student-dashboard.html')">Student Portal</button></li>
       <li><button onclick="goToPage('teacher-resources.html')">Teacher Resources</button></li>
-      <li><button onclick="goToPage('timetable.html')">Timetable</button></li>
+      <li><button onclick="goToPage('class.html')">Timetable</button></li>
     </ul>
     <button id="logoutBtn">Logout</button>
   </section>
