--- a/student-portal.html
+++ b/student-portal.html
@@ -21,12 +21,12 @@
     <nav id="sideMenu" class="side-menu" aria-label="Sidebar navigation">
         <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()" tabindex="0" aria-label="Close menu">&times;</a>
         <a href="index.html">News & Announcements</a>
-        <a href="student-portal.html">Student Portal</a>
+        <a href="student-dashboard.html">Student Portal</a>
         <a href="admissions.html">Admissions</a>
         <a href="resources.html">Resources</a>
         <a href="showcase.html">About Us</a>
         <a href="contact.html">Contact</a>
-        <a href="timetable.html">Timetable</a>
+        <a href="class.html">Timetable</a>
         <a href="teacher-resources.html">Teacher Resources</a>
         <a href="parent-portal.html">Parent Portal</a>
     </nav>
