--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -94,9 +94,9 @@
   <section>
     <div id="welcome" class="welcome-message"></div>
     <div class="dashboard-buttons">
-      <a href="homework.html">Homework</a>
-      <a href="notes.html">Notes</a>
-      <a href="timetable.html">Timetable</a>
+      <a href="class.html">Homework</a>
+      <a href="class.html">Notes</a>
+      <a href="class.html">Timetable</a>
     </div>
   </section>
 
