--- a/student-portal.html
+++ b/student-portal.html
@@ -41,7 +41,7 @@
         <h2>Student Portal</h2>
         <p>Students can log in to view grades, attendance, fee status, and download class materials.</p>
         <div class="portal-links">
-            <a href="login.html" class="button">Login</a>
+            <a href="register.html" class="button">Login</a>
             <a href="register.html" class="button">Register</a>
         </div>
     </section>
